Rename circleci config file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 jobs:
   build:
-    working_directory: ~/oxide
+    working_directory: ~/oxide2
     docker:
       - image: ubuntu:rolling
     steps:
@@ -27,5 +27,5 @@ jobs:
             ln -s /usr/bin/clang++-6.0 /usr/bin/clang++
             make -j2
       - store_artifacts:
-          path: ~/oxide/bin/Debug/liboxide.a
+          path: ~/oxide2/bin/Debug/liboxide.a
           destination: liboxide.a
