--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,8 @@ jobs:
           name: Install dependencies
           command: |
             apt-get update -qq
-            apt-get install -y build-essential clang-6.0 git libgl1-mesa-dev libglu1-mesa-dev libx11-dev libxfixes-dev libxext-dev
+            apt-get install -y build-essential clang-6.0 git \
+            libgl1-mesa-dev libglu1-mesa-dev libx11-dev libxfixes-dev libxext-dev
       - checkout
       - run: git submodule sync
       - run: git submodule update --init --recursive
